# statsd-filter-proxy-rs

./: Cargo.toml
benches/: codec_bench.rs  filter_bench.rs  integration_bench.rs
src/: config.rs  filter.rs  filtered_codec.rs  lib.rs  main.rs  server.rs
