[package]
name = "statsd-filter-proxy-rs"
version = "0.2.1"
authors = ["askldjd"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
futures-util = { version = "0.3.8", default-features = false, features = ["std"] }
tokio = { version = "1.4.0", features = ["macros", "net", "rt-multi-thread"] }
tokio-util = { version = "0.6.5", features = ["codec", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.8.3"

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "filter_bench"
harness = false

[[bench]]
name = "codec_bench"
harness = false